# soft_wgm_user_interface_qt_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  QtDockerWin.dockerfile  README.md  checkout_all_to_win_dev_api.bat  cpack_install_script.bat  create_branch_for_each_submodule.bat  docker_push_qt_win_img.bat  generate_docs.bat  install_script.bat  pythonTests.bat  qt6_build_install.bat  target_install_script.bat  vcpkg_install_script.bat
.VSCodeCounter/2022-11-08_15-03-36/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-11-28_16-30-25/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-21_22-16-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-01-17_11-29-22/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-01-24_10-24-34/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-02-08_21-23-03/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: cmake.yml  cmake_qt.yml  cmake_qt_allbranches.yml  cmake_qt_basic.yml  cmake_qt_jobs_seq.yml  cmake_qt_multijobs.yml  cmake_qt_onejob.yml  cmake_qt_paralleljobs.yml  codeql.yml  docker_build_win_qt.yml  docker_build_win_qt_img.yml
Testing/: TAG
Testing/20230125-1057/: Test.xml
Testing/20230213-1646/: Test.xml
cmake/: Windeployqt.cmake
dependencies/: CMakeLists.txt  README.md
dependencies/database/: CMakeLists.txt  Idatabase.cpp  Idatabase.h  aligningDB.cpp  aligningDB.h  coolingDB.cpp  dbFetch.py  dbIncludeAll.h  experimentDB.h  extractingDB.cpp  extractingDB.h  heatingDB.cpp  main.cpp  sinkingDB.cpp  sinkingDB.h  userDB.cpp  userDB.h
dependencies/model/: CMakeLists.txt  cntAlignModel.cpp  cntAlignModel.h  coolingModel.cpp  coolingModel.h  extractingModel.cpp  extractingModel.h  heatingModel.cpp  heatingModel.h  mainModel.cpp  model.cpp  model.h  sinkingModel.cpp  sinkingModel.h
dependencies/modelLayer/: CMakeLists.txt  cntAlignModel.cpp  coolingModel.cpp  extractingModel.cpp  heatingModel.cpp  mainModel.cpp  model.cpp  sinkingModel.cpp  sinkingModel.h
docs/: Doxyfile
docs/html/: _iaxis__motion_8cpp.html  _iaxis__motion_8cpp__incl.map  _iaxis__motion_8cpp__incl.md5  _iaxis__motion_8cpp_source.html  _iaxis__motion_8h.html  _iaxis__motion_8h.js  _iaxis__motion_8h__dep__incl.map  _iaxis__motion_8h__dep__incl.md5  _iaxis__motion_8h__incl.map  _iaxis__motion_8h__incl.md5  _iaxis__motion_8h_source.html  _icnt__axis__motion_8cpp.html  _icnt__axis__motion_8cpp__incl.map  _icnt__axis__motion_8cpp__incl.md5  _icnt__axis__motion_8cpp_source.html  _icnt__axis__motion_8h.html  _icnt__axis__motion_8h.js  _icnt__axis__motion_8h__dep__incl.map  _icnt__axis__motion_8h__dep__incl.md5  _icnt__axis__motion_8h__incl.map  _icnt__axis__motion_8h__incl.md5  _icnt__axis__motion_8h_source.html  _icnt__dispenser_8cpp.html  _icnt__dispenser_8cpp__incl.map  _icnt__dispenser_8cpp__incl.md5  _icnt__dispenser_8cpp_source.html  _icnt__dispenser_8h.html  _icnt__dispenser_8h.js  _icnt__dispenser_8h__dep__incl.map  _icnt__dispenser_8h__dep__incl.md5  _icnt__dispenser_8h__incl.map  _icnt__dispenser_8h__incl.md5  _icnt__dispenser_8h_source.html  _icnt__high__voltage_8cpp.html  _icnt__high__voltage_8cpp__incl.map  _icnt__high__voltage_8cpp__incl.md5  _icnt__high__voltage_8cpp_source.html  _icnt__high__voltage_8h.html  _icnt__high__voltage_8h.js  _icnt__high__voltage_8h__dep__incl.map  (+2262 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  (+93 more)
includes/app/: cntAlignView.h  coolingView.h  extractingView.h  heatingView.h  mainView.h  menuView.h  processTabView.h  sinkingView.h
includes/businesslogic/: coolingController.h  heatingController.h
pkg/: UsersDataBase.db  wgm_application_user_manual.docx
qtDocker/: docker-compose.yml
qtDocker/scripts/: install-qt.sh
scripts/: checkout_all_to_win_dev_api.bat  cpack_install_script.bat  create_branch_for_each_submodule.bat  docker_push_qt_win_img.bat  generate_docs.bat  push_branch_for_each_submodule.bat  pythonTests.bat  qt6_build_install.bat  target_install_script.bat  vcpkg_install_script.bat
src/: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  cntAlignView.cpp  cntAlignView.h  coolingView.cpp  coolingView.h  extractingView.cpp  extractingView.h  heatingView.cpp  heatingView.h  main.cpp  mainView.cpp  mainView.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  menuDebugView.cpp  menuDebugView.h  menuEditView.cpp  menuEditView.h  menuFileView.cpp  menuFileView.h  menuView.h  processTabView.cpp  processTabView.h  sensor.cpp  sensor.h  sinkingView.cpp  sinkingView.h  view.h
src/businesslogic/: CMakeLists.txt  cntAlignController.cpp  cntAlignController.h  controller.cpp  controller.h  coolingController.cpp  coolingController.h  extractingController.cpp  extractingController.h  heatingController.cpp  mainController.cpp  mainController.h  sinkingController.cpp  sinkingController.h
src/controlLayer/: CMakeLists.txt  cntAlignController.cpp  cntAlignController.h  controller.cpp  coolingController.cpp  coolingController.h  extractingController.cpp  heatingController.cpp  heatingController.h  mainController.cpp  sinkingController.cpp  sinkingController.h
src/viewLayer/: CMakeLists.txt  cntAlignView.cpp  cntAlignView.h  coolingView.cpp  extractingView.cpp  heatingView.cpp  mainView.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuDebugView.cpp  menuEditView.cpp  menuFileView.cpp  menuHelpView.cpp  menuToolsView.cpp  menuView.cpp  menuView.h  menuViewCamera.cpp  menuViewCamera.h  processTabView.h  sinkingView.cpp  sinkingView.h  view.cpp  view.h
tests/: CMakeLists.txt  MyClass.h  MyClassTest.cpp  main.cpp  server_axis.py  server_keyence.py
tests/cntViewTest/: cntViewTest.cpp  cntViewTest.h
(+97 files in other folders)
